# legged_bot_hardware

./: CMakeLists.txt  package.xml
cmake/: legged_bot_hardwareConfig.cmake
launch/: legged_wheel_bot.launch  legged_wheel_bot_nav.launch
legged_bot_IMU/: legged_bot_IMU.ino
src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  legged_bot_hardware_node.cpp
src/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/catkin_generated/installspace/: _setup_util.py  legged_bot_hardware.pc  legged_bot_hardwareConfig.cmake
src/catkin_generated/stamps/legged_bot_hardware/: package.xml.stamp
src/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/devel/lib/legged_bot_hardware/: legged_bot_hardware_node
src/devel/lib/pkgconfig/: legged_bot_hardware.pc
src/devel/share/legged_bot_hardware/cmake/: legged_bot_hardwareConfig.cmake
src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
src/leggedlib/: CMakeLists.txt
src/leggedlib/include/: SerialClass.h  action.h  group_motor_control.h  inverse_kinemetics.h  motor_control.h  torque.h  wheel.h
src/leggedlib/src/: SerialPort.cpp  action.cpp  group_motor_control.cpp  inverse_kinemetics.cpp  motor_control.cpp  torque.cpp  wheel.cpp
src/src/leggedlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
